--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:name=".di.application"
         tools:targetApi="31">
         <activity
-            android:name=".ui.apilist.activity.SplashActivity"
+            android:name=".ui.splashscreen.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.apilist.activity.ApiListActivity"
+            android:name=".ui.apidatalist.ApiListActivity"
             android:exported="false"
             android:screenOrientation="portrait">
         </activity>
